fix:index scss change overflow to html element for scrolling
change overflow to html element for scrolling

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -14,7 +14,7 @@ body {
 }
 
 html {
-	overflow-x: hidden;
+	overflow-x: revert;
 }
 
 body {
